--- a/ECM2434/Ecolution/templates/home.html
+++ b/ECM2434/Ecolution/templates/home.html
@@ -121,7 +121,7 @@
             <a href="home.html">Home</a>
             <a href="tasks.html">Tasks</a>
             <a href="map.html">Map</a>
-            <a href="settings.html">Settings</a>
+            <a href="{% url 'settings' %}">Settings</a>
         </div>
     </div>
 
