--- a/ECM2434/Ecolution/templates/home.html
+++ b/ECM2434/Ecolution/templates/home.html
@@ -18,16 +18,16 @@
             <button class="button_img flex_v flex_center box_shadow" type="button" onclick="toggleMenu()">
                 <img src="/static/images/icon_button.png" alt="Settings">
             </button>
-            <!-- <div class="settings_menu" id="settingsMenu">
-                <a href="home.html">Home</a>
-                <a href="tasks.html">Tasks</a>
-                <a href="map.html">Map</a>
-                <a href="settings.html">Settings</a>
-            </div> -->
+            <!--<div class="settings_menu" id="settingsMenu">
+                 <a href="{% url 'home' %}">Home</a> 
+                <a href="{% url 'tasks' %}">Tasks</a>
+                <a href="{% url 'map' %}">Map</a>
+                <a href="{% url 'settings' %}">Settings</a>
+            </div>-->
         </section>
         <section class="currency_indicator">
             <div class="flex_h flex_h_fill flex_center">
-                <h3 class="text_light">320</h3>
+                <h3 class="text_light">{{ points }}</h3>
                 <img class="img_leaf" src="{% static 'images/leaf.png' %}" alt="Leaf">
             </div>
         </section>
