settings and home page function

--- a/ECM2434/Ecolution/templates/home.html
+++ b/ECM2434/Ecolution/templates/home.html
@@ -19,9 +19,8 @@
                 <img src="/static/images/icon_button.png" alt="Settings">
             </button>
             <!--<div class="settings_menu" id="settingsMenu">
-                 <a href="{% url 'home' %}">Home</a> 
+                <a href="{% url 'home' %}">Home</a> 
                 <a href="{% url 'tasks' %}">Tasks</a>
-                <a href="{% url 'map' %}">Map</a>
                 <a href="{% url 'settings' %}">Settings</a>
             </div>-->
         </section>
@@ -50,11 +49,11 @@
             <div class="pet_status flex_v margin_sml flex_v_fill">
                 <p>Pet Name: Acorn</p>
                 <div class="xp_bar box_shadow">
-                    <div class="xp_bar_progress"></div>
+                    <div class="xp_bar_progress" style="width: 50%"></div>
                 </div>
                 <div class="flex_h">
                     <p class="xp_bar_label" id="xp_bar_xp_current">20XP</p>
-                    <p class="xp_bar_label" id="xp_bar_xp_to_next_level">40XP</p>
+                    <p class="xp_bar_label" id="xp_bar_xp_to_next_level">100XP</p>
                 </div>
             </div>
         </section>
