--- a/ECM2434/Ecolution/templates/settings.html
+++ b/ECM2434/Ecolution/templates/settings.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -88,33 +89,42 @@
             font-weight: bold;
         }
     </style>
+    {% load static %}
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
+
 <body>
+    <main>
 
-    <div class="settings-container">
-        <div class="header">
-            <h2>Settings</h2>
+        <div class="settings-container">
+            <div class="header">
+                <h2>Settings</h2>
+            </div>
+
+            <div class="user-info">
+                <img src="static/images/profile.jpg" alt="Profile Picture" class="profile-pic">
+                <h2>User Name</h2>
+                <p>Joined on DD/MM/YYYY</p>
+            </div>
+
+            <div class="details">
+                <span>📍 Exeter, United Kingdom</span>
+                <span>✔ XX Tasks Completed</span>
+            </div>
+
+            <ul class="settings-list">
+                <li onclick="location.href='edit-profile.html'">Edit Profile</li>
+                <li onclick="location.href='completed-tasks.html'">Completed Tasks</li>
+                <li onclick="location.href='location.html'">Location</li>
+                <li onclick="location.href='delete-account.html'">Delete Account</li>
+                <li class="logout" onclick="location.href='home.html'">Logout</li>
+            </ul>
         </div>
-
-        <div class="user-info">
-            <img src="static/images/profile.jpg" alt="Profile Picture" class="profile-pic">
-            <h2>User Name</h2>
-            <p>Joined on DD/MM/YYYY</p>
-        </div>
-
-        <div class="details">
-            <span>📍 Exeter, United Kingdom</span>
-            <span>✔ XX Tasks Completed</span>
-        </div>
-
-        <ul class="settings-list">
-            <li onclick="location.href='edit-profile.html'">Edit Profile</li>
-            <li onclick="location.href='completed-tasks.html'">Completed Tasks</li>
-            <li onclick="location.href='location.html'">Location</li>
-            <li onclick="location.href='delete-account.html'">Delete Account</li>
-            <li class="logout" onclick="location.href='home.html'">Logout</li>
-        </ul>
-    </div>
+    </main>
 
 </body>
+
 </html>
