--- a/ECM2434/Ecolution/templates/settings.html
+++ b/ECM2434/Ecolution/templates/settings.html
@@ -89,7 +89,9 @@
         }
     </style>
 </head>
-<body>
+
+<body class="background">
+    <main>
 
     <div class="settings-container">
         <div class="header">
@@ -115,6 +117,6 @@
             <li class="logout" onclick="location.href='home.html'">Logout</li>
         </ul>
     </div>
-
+    </main>
 </body>
 </html>
