--- a/ECM2434/Ecolution/templates/home.html
+++ b/ECM2434/Ecolution/templates/home.html
@@ -33,8 +33,10 @@
     </header>
     <main class="margin_std flex_v" style="height: 100vh;">
         <section class="pet">
-            <div class="container flex_v flex_center">
-                <img src="/static/images/pets/acorn/acorn_small.png" alt="Pet Image">
+            <div class="flex_v flex_center">
+                <div class="image_wrapper">
+                    <img src="/static/images/pets/acorn/acorn_small.gif" alt="Pet Image">
+                </div>
                 <h3 class="text_light">Pet Name</h3>
             </div>
         </section>
