--- a/ECM2434/Ecolution/static/styles.css
+++ b/ECM2434/Ecolution/static/styles.css
@@ -294,8 +294,7 @@ section.pet img {
     width: 400px;
     height: 400px;
     image-rendering: pixelated;
-    /* TODO: Fix position */
-    margin-left: -100px;
+    margin-left: calc(-100px - 1.2rem);
     margin-top: -100px;
 }
 
