--- a/ECM2434/Ecolution/templates/home.html
+++ b/ECM2434/Ecolution/templates/home.html
@@ -18,11 +18,11 @@
             <button class="button_img flex_v flex_center box_shadow" type="button" onclick="toggleMenu()">
                 <img src="/static/images/icon_button.png" alt="Settings">
             </button>
-            <!--<div class="settings_menu" id="settingsMenu">
+            <section class="settings_menu" id="settingsMenu">
                 <a href="{% url 'home' %}">Home</a> 
                 <a href="{% url 'tasks' %}">Tasks</a>
                 <a href="{% url 'settings' %}">Settings</a>
-            </div>-->
+            </section>
         </section>
         <section class="currency_indicator">
             <div class="flex_h flex_h_fill flex_center">
@@ -35,9 +35,9 @@
         <section class="pet">
             <div class="flex_v flex_center">
                 <div class="image_wrapper">
-                    <img src="/static/images/pets/acorn/acorn_small.gif" alt="Pet Image">
+                    <img src="{% static 'images/pets/mushroom/mushroom_large.gif' %}" alt="Pet Image">
                 </div>
-                <h3 class="text_light">Pet Name</h3>
+                <!-- <h3 class="text_light">Pet Name</h3> -->
             </div>
         </section>
 
