--- a/ECM2434/Ecolution/templates/settings.html
+++ b/ECM2434/Ecolution/templates/settings.html
@@ -113,7 +113,7 @@
             <li onclick="location.href='edit-profile.html'">Edit Profile</li>
             <li onclick="location.href='completed-tasks.html'">Completed Tasks</li>
             <li onclick="location.href='location.html'">Location</li>
-            <li onclick="location.href='delete-account.html'">Delete Account</li>
+            <li onclick="location.href='{% url 'delete_account' %}'">Delete Account</li>
             <li class="logout" onclick="location.href='home.html'">Logout</li>
         </ul>
     </div>
