--- a/ECM2434/Ecolution/templates/events.html
+++ b/ECM2434/Ecolution/templates/events.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends "base.html" %}
+{% load static %}
+
+{% block title %}
     <title>Events - Ecolution</title>
-</head>
-<body>
+{% endblock %}
 
-    Events page
-
-</body>
-</html>
+{% block main %}
+    <!-- Main Content -->
+{% endblock %}
