--- a/ECM2434/Ecolution/templates/home.html
+++ b/ECM2434/Ecolution/templates/home.html
@@ -1,113 +1,76 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
+{% load static %}
 
-<head>
-    <meta charset="utf-8">
+{% block title %}
     <title>Home - Ecolution</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% load static %}
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Jost&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'styles.css' %}">
-</head>
+{% endblock %}
 
-<body class="background">
-    <header class="flex_h margin_std">
-        <section class="button_settings">
-            <button class="button_img flex_v flex_center box_shadow" type="button" onclick="toggleUseMenu()">
-                <img src="/static/images/icon_button.png" alt="Settings">
-            </button>
-            <section class="settings_menu" id="settingsMenu">
-                <a href="{% url 'home' %}">Home</a> 
-                <a href="{% url 'tasks' %}">Tasks</a>
-                <a href="{% url 'settings' %}">Settings</a>
-            </section>
+{% block main %}
+    <section class="pet">
+        <div class="flex_v flex_center">
+            <div class="image_wrapper">
+                <img src="{% static 'images/pets/mushroom/mushroom_large.gif' %}" alt="Pet Image">
+            </div>
+            <h3 class="text_light">{{ pet_name }}</h3>
+        </div>
+    </section>
+
+    <section class="spacer_big"></section>
+    <section class="status_bar flex_h flex_center text_light">
+        <div class="pet_status flex_v margin_sml flex_v_fill">
+            <p>Pet Name: Acorn</p>
+            <div class="xp_bar box_shadow">
+                <div class="xp_bar_progress" style="width: {{ pet_exp }}%;"></div>
+            </div>
+            <div class="flex_h">
+                <p class="xp_bar_label" id="xp_bar_xp_current">{{ pet_exp }}XP</p>
+                <p class="xp_bar_label" id="xp_bar_xp_to_next_level">100XP</p>
+            </div>
+        </div>
+    </section>
+    <section class="current_tasks">
+        <section class="heading flex_h">
+            <div class="flex_v">
+                <h2 class="text_light">Current Tasks</h2>
+                <p class="text_light">Select a task to view or edit details</p>
+            </div>
+            <button class="button box_shadow text_light" type="button" onclick="toggleMenu()">View All</button>
         </section>
-        <section class="currency_indicator">
-            <div class="flex_h flex_h_fill flex_center">
-                <h3 class="text_light">{{ points }}</h3>
-                <img class="img_leaf" src="{% static 'images/leaf.png' %}" alt="Leaf">
+        <section class="card_task card box_shadow text_light">
+            <div class="content flex_h flex_fill_h flex_center flex_gap_std margin_sml">
+                <div class="task_icon flex_v flex_center">🌲</div>
+                <div class="flex_v flex_v_fill ">
+                    <h3>Task Title</h3>
+                    <p class="task_description">Task Description</p>
+                </div>
+                <button class="button_img_light flex_v flex_center" type="button" onclick="toggleMenu()">
+                    <img src="/static/images/icon_button.png" alt="Settings">
+                </button>
             </div>
         </section>
-    </header>
-    <main class="margin_std flex_v" style="height: 100vh;">
-        <section class="pet">
-            <div class="flex_v flex_center">
-                <div class="image_wrapper">
-                    <img src="{% static 'images/pets/mushroom/mushroom_large.gif' %}" alt="Pet Image">
+        <section class="card_task card box_shadow text_light">
+            <div class="content flex_h flex_fill_h flex_center flex_gap_std margin_sml">
+                <div class="task_icon flex_v flex_center">♻️</div>
+                <div class="flex_v flex_v_fill ">
+                    <h3>Task Title</h3>
+                    <p class="task_description">Task Description</p>
                 </div>
-                <h3 class="text_light">{{ pet_name }}</h3>
+                <button class="button_img_light flex_v flex_center" type="button" onclick="toggleMenu()">
+                    <img src="/static/images/icon_button.png" alt="Settings">
+                </button>
             </div>
         </section>
-
-        <section class="spacer_big"></section>
-        <section class="status_bar flex_h flex_center text_light">
-            <div class="pet_status flex_v margin_sml flex_v_fill">
-                <p>Pet Name: Acorn</p>
-                <div class="xp_bar box_shadow">
-                    <div class="xp_bar_progress" style="width: {{ pet_exp }}%;"></div>
+        <section class="card_task card box_shadow text_light">
+            <div class="content flex_h flex_fill_h flex_center flex_gap_std margin_sml">
+                <div class="task_icon flex_v flex_center">🚀</div>
+                <div class="flex_v flex_v_fill ">
+                    <h3>Task Title</h3>
+                    <p class="task_description">Task Description</p>
                 </div>
-                <div class="flex_h">
-                    <p class="xp_bar_label" id="xp_bar_xp_current">{{ pet_exp }}XP</p>
-                    <p class="xp_bar_label" id="xp_bar_xp_to_next_level">100XP</p>
-                </div>
+                <button class="button_img_light flex_v flex_center" type="button" onclick="toggleMenu()">
+                    <img src="/static/images/icon_button.png" alt="Settings">
+                </button>
             </div>
         </section>
-        <section class="current_tasks">
-            <section class="heading flex_h">
-                <div class="flex_v">
-                    <h2 class="text_light">Current Tasks</h2>
-                    <p class="text_light">Select a task to view or edit details</p>
-                </div>
-                <button class="button box_shadow text_light" type="button" onclick="toggleMenu()">View All</button>
-            </section>
-            <section class="card_task card box_shadow text_light">
-                <div class="content flex_h flex_fill_h flex_center flex_gap_std margin_sml">
-                    <div class="task_icon flex_v flex_center">🌲</div>
-                    <div class="flex_v flex_v_fill ">
-                        <h3>Task Title</h3>
-                        <p class="task_description">Task Description</p>
-                    </div>
-                    <button class="button_img_light flex_v flex_center" type="button" onclick="toggleMenu()">
-                        <img src="/static/images/icon_button.png" alt="Settings">
-                    </button>
-                </div>
-            </section>
-            <section class="card_task card box_shadow text_light">
-                <div class="content flex_h flex_fill_h flex_center flex_gap_std margin_sml">
-                    <div class="task_icon flex_v flex_center">♻️</div>
-                    <div class="flex_v flex_v_fill ">
-                        <h3>Task Title</h3>
-                        <p class="task_description">Task Description</p>
-                    </div>
-                    <button class="button_img_light flex_v flex_center" type="button" onclick="toggleMenu()">
-                        <img src="/static/images/icon_button.png" alt="Settings">
-                    </button>
-                </div>
-            </section>
-            <section class="card_task card box_shadow text_light">
-                <div class="content flex_h flex_fill_h flex_center flex_gap_std margin_sml">
-                    <div class="task_icon flex_v flex_center">🚀</div>
-                    <div class="flex_v flex_v_fill ">
-                        <h3>Task Title</h3>
-                        <p class="task_description">Task Description</p>
-                    </div>
-                    <button class="button_img_light flex_v flex_center" type="button" onclick="toggleMenu()">
-                        <img src="/static/images/icon_button.png" alt="Settings">
-                    </button>
-                </div>
-            </section>
-        </section>
-    </main>
-
-    <script>
-        function toggleUseMenu() {
-            var menu = document.getElementById("settingsMenu");
-            menu.style.display = menu.style.display === "block" ? "none" : "block";
-        }
-    </script>
-
-</body>
-
-</html>
+    </section>
+{% endblock %}
