--- a/ECM2434/Ecolution/templates/login.html
+++ b/ECM2434/Ecolution/templates/login.html
@@ -1,31 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends "base.html" %}
+{% load static %}
+
+{% block title %}
     <title>Login - Ecolution</title>
-    {% load static %}
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jost&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'styles.css' %}">
-</head>
+{% endblock %}
 
-<body class="background">
-    <main class="flex_v">
-        <section class="spacer_big"></section>
-        <section class="signup card flex_v flex_center box_shadow margin_std">
-            <h2 class="text_dark margin_std_bot">Login to Ecolution</h2>
-            <form class="flex_v flex_v_fill" method="POST">
-                {% csrf_token %}
-                <input type="text" name="username" placeholder="Username" required>
-                <input type="password" name="password" placeholder="Password" required>
-                <button class="button box_shadow" type="submit">Login</button>
-            </form>
-            <p class="text_dark font_small margin_std_top">Don't have an account? <a href="{% url 'signup' %}">Sign up here</a></p>
-        </section>
+<!-- Overrides header block so there isn't a navbar on this page -->
+{% block header %}
+{% endblock %}
 
-    </main>
-
-</body>
-</html>
+{% block main %}
+    <section class="spacer_big"></section>
+    <section class="signup card flex_v flex_center box_shadow">
+        <h2 class="text_dark margin_std_bot">Login to Ecolution</h2>
+        <form class="flex_v flex_v_fill" method="POST">
+            {% csrf_token %}
+            <input type="text" name="username" placeholder="Username" required>
+            <input type="password" name="password" placeholder="Password" required>
+            <button class="button box_shadow" type="submit">Login</button>
+        </form>
+        <p class="text_dark font_small margin_std_top">Don't have an account? <a href="{% url 'signup' %}">Sign up here</a></p>
+    </section>
+{% endblock %}
