--- a/ECM2434/Ecolution/templates/signup.html
+++ b/ECM2434/Ecolution/templates/signup.html
@@ -1,37 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends "base.html" %}
+{% load static %}
+
+{% block title %}
     <title>Sign Up - Ecolution</title>
-    {% load static %}
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jost&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'styles.css' %}">
-</head>
-<body class="background">
-    <main class="flex_v">
-        <section class="spacer_big"></section>
-        <section class="signup card flex_v flex_center box_shadow margin_std">
-            <h2 class="text_dark margin_std_bot">Create an Account</h2>
-            <form class="flex_v flex_v_fill" method="POST">
-                {% csrf_token %}
-                <input type="email" name="email" placeholder="Email" required>
-                <input type="text" name="username" placeholder="Username" required>
-                <input type="password" name="password1" placeholder="Password" required>
-                <input type="password" name="password2" placeholder="Confirm Password" required>
-                <button class="button box_shadow" type="submit">Sign Up</button>
-            </form>
-            <p class="text_dark font_small margin_std_top">Already have an account? <a href="{% url 'login' %}">Login here</a></p>
-        </section>
-        {% if messages %}
-        <ul class="error-messages">
-            {% for message in messages %}
-                <li>{{ message }}</li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-    </main>
-</body>
-</html>
+{% endblock %}
+
+<!-- Overrides header block so there isn't a navbar on this page -->
+{% block header %}
+{% endblock %}
+
+{% block main %}
+    <section class="spacer_big"></section>
+    <section class="signup card flex_v flex_center box_shadow ">
+        <h2 class="text_dark margin_std_bot">Create an Account</h2>
+        <form class="flex_v flex_v_fill" method="POST">
+            {% csrf_token %}
+            <input type="email" name="email" placeholder="Email" required>
+            <input type="text" name="username" placeholder="Username" required>
+            <input type="password" name="password1" placeholder="Password" required>
+            <input type="password" name="password2" placeholder="Confirm Password" required>
+            <button class="button box_shadow" type="submit">Sign Up</button>
+        </form>
+        <p class="text_dark font_small margin_std_top">Already have an account? <a href="{% url 'login' %}">Login here</a></p>
+    </section>
+    {% if messages %}
+    <ul class="error-messages">
+        {% for message in messages %}
+            <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+{% endblock %}
